Implement TreeView as a ZoomView
Rewrote most of edu.rpi.legup.ui.proofeditorui.treeview such that TreeView is now a ZoomView inside of a ZoomPane.

Made some necessary controller and model adjustments to make the view behave as expected.

Fixes:
#991
#863